--- a/config.env
+++ b/config.env
@@ -37,7 +37,7 @@ MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) M
 SET_BOT_COMMANDS = "True" 
 
 #UPDATE
-UPSTREAM_REPO = "https://github.com/ThanzeerCould1/WZML"
+UPSTREAM_REPO = "https://github.com/weebzone/WZML"
 UPSTREAM_BRANCH = "master"
 UPDATE_PACKAGES = "False"
 
